fixed some margin in the footer css that made the contact form look out of place

--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,6 +1,6 @@
 footer {
     width: 100%;
-    margin-top: 6rem;
+    margin-top: 3rem;
     background-color: rgba(8, 112, 184, 0.7);
 }
 
